feat: 增加获取资源树形接口；修改go mod项目名
